# finalproject_bednyakov_M25-555

./: .gitignore  README.md  main.py  pyproject.toml
valutrade_hub/: decorators.py  logging_config.py
valutrade_hub/cli/: interface.py
valutrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
valutrade_hub/infra/: settings.py
valutrade_hub/parser_service/: api_clients.py  config.py  storage.py  updater.py
